@@ -5,7 +5,8 @@
 === 0.5.11 ===
 - Improved expr::format functions: extended format specifiers.
 - Refactoring of the lsp::Color utility class interface.
-- Added support of XYZ color scheme by the lsp::Color utility class.
+- Added support of XYZ color space by the lsp::Color utility class.
+- Added support of CIE LAB D65 color space by the lsp::Color utility class.
 - Added support of function-look color parsing by the lsp::Color utility class.
 
 === 0.5.10 ===
